--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,10 +22,10 @@ jobs:
       run: docker run offensiveanalyticstests
     - name: Build release
       run: docker build . --file Dockerfile.app -t kolyanok/offensiveanalyticsapp:v$GITHUB_RUN_NUMBER
-    - name: push to DockerHub
-      run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker push kolyanok/offensiveanalyticsapp:v$GITHUB_RUN_NUMBER
+#    - name: push to DockerHub
+#      run: |
+#        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+#        docker push kolyanok/offensiveanalyticsapp:v$GITHUB_RUN_NUMBER
       
       
   cscheck:
